02/10/2013 Jet Goodson <jetgoodson@gmail.com>
	- added utilityBelt.R
	- holds various helper functions, mostly for
	  changing resolution of character images
        - added data/test_ReducedRez.csv
        - added data/train_ReducedRez.csv
	- feature-reduced versions of test.csv and train.csv
	M LitteraLector.R
	- made into more of a control macro
	M rageAgainstTheSupportVectorMachine.R
	- cleaned up
	
02/7/2013 Jet Goodson <jetgoodson@gmail.com>
	- added rageAgainstTheSupportVectorMachine.R
	- put good code in it, up to a grid search for cost/gamma
	- added randomForestForTheTrees.R
	- empty for now
	
01/30/2013 Katie Malone <cmmalone.158@gmail.com>
	- cloned repo

01/30/2012 Jet Goodson <jetgoodson@gmail.com>
	- added LitteraLector.R
	- put in some data handling stuff
	- as much a reference as anything for now
	

01/29/2013 Jet Goodson <jetgoodson@gmail.com>
	- made repo
	- added README
	- added changelog
	- added data folder
	- added data/test.csv
	- added data/train.csv