@@ -1,6 +1,6 @@
 #################################
 # LitteraLector.R
-# written by Jet Goodson 
+# written by Jet Goodson and John Backus Meyer
 # started in February 2009
 # contact at jetgoodson@gmail.com
 #
@@ -11,11 +11,11 @@
 LitteraLector <-function() {
 
    library(e1071)                                  #get the SVM tools
-   library(caret)                                  #get the zeroVar tools
+   #library(caret)                                  #get the zeroVar tools
    source("utilityBelt.R")                         #custom utility tools
    source("rageAgainstTheSupportVectorMachine.R")  #our calls to SVM
 
-   deRezData <- FALSE  #this will reduce the resolution of the original data
+   deRezData <- TRUE  #this will reduce the resolution of the original data
    deRezFactor <- 0.5  #a factor of 1/2 means that a 2x2 cluster of pixels becomes 1 pixel
                     #and a four fold decrease in features
 
@@ -28,15 +28,20 @@ LitteraLector <-function() {
       preTest = "data/test.csv"
       preTrain = "data/train.csv"
 
-      constantColumns <- writeDeRezedDataFrame(preTrain, testInput, deRezFactor)
-      constantColumns <- constantColumns - 1 #test data doesn't have labels, have to shift list down
-      constantColumns <- writeDeRezedDataFrame(preTest, trainInput, deRezFactor, constantColumns)
+      writeDeRezedDataFrame(preTrain, testInput, deRezFactor)
+      writeDeRezedDataFrame(preTest, trainInput, deRezFactor, hasLabels = FALSE)
    }
-
 
    trainFrame <- read.csv(trainInput, header=FALSE,skip=1,stringsAsFactors=FALSE)
    testFrame  <- read.csv(testInput,  header=FALSE,skip=1,stringsAsFactors=FALSE)
-  
+
+   #get rid of constant columns
+   constantColumns <- sapply(trainFrame, function(column){ all(column[1] == column) })
+   trainFrame <- trainFrame[, -constantColumns]
+   constantColumns <- constantColumns - 1 #test data doesn't have labels, have to shift list down
+   testFrame <- testFrame[, -constantColumns]  
+
+
    svmModel <- rageAgainstTheSupportVectorMachine(trainFrame)
 
 
